[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/GUI/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Background/Background.png" type="Texture" id=2]
[ext_resource path="res://Assets/Styles/Button_Styles/Hover_Button_Style.stylebox" type="StyleBox" id=3]
[ext_resource path="res://Assets/Styles/Button_Styles/Normal_Button_Style.stylebox" type="StyleBox" id=4]
[ext_resource path="res://Assets/Fonts/PixelFont/PixelFont.tres" type="DynamicFont" id=5]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="BG" type="Sprite" parent="."]
position = Vector2( 124.382, 69.2596 )
scale = Vector2( 0.965745, 0.965745 )
texture = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 72.3655
margin_top = 107.555
margin_right = 160.366
margin_bottom = 127.555
rect_scale = Vector2( 1.2, 1.2 )
alignment = 1

[node name="CloseGame" type="Button" parent="HBoxContainer"]
margin_right = 43.0
margin_bottom = 20.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "  Exit  "

[node name="Help" type="Button" parent="HBoxContainer"]
margin_left = 47.0
margin_right = 88.0
margin_bottom = 20.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = " Help "

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_bottom = 1.0
margin_left = 47.2522
margin_top = 22.0784
margin_right = 177.252
margin_bottom = -55.9216
rect_scale = Vector2( 1.2, 1.2 )

[node name="Settings" type="Button" parent="VBoxContainer"]
margin_right = 130.0
margin_bottom = 20.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Settings"

[node name="Shop" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 130.0
margin_bottom = 44.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Shop"

[node name="PlayGame" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 130.0
margin_bottom = 68.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = " Play Game "

[connection signal="pressed" from="HBoxContainer/CloseGame" to="." method="_on_CloseGame_pressed"]
[connection signal="pressed" from="HBoxContainer/Help" to="." method="_on_Help_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Shop" to="." method="_on_Shop_pressed"]
[connection signal="pressed" from="VBoxContainer/PlayGame" to="." method="_on_PlayGame_pressed"]
